[package]
name = "govote-voting-v1"
version = "0.1.0"
authors = ["kosamit <kosamit@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-std = "3.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
panic = "abort"
