[package]
name = "govote-voting-v1"
version = "0.1.0"
authors = ["kosamit <kosamit@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[features]
default = ["std"]
std = ["concordium-std/std"]

[dependencies]
concordium-std = "5.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
panic = "abort"
